--- a/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
+++ b/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
@@ -1,20 +1,33 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.ContinuousConvMode=DISABLE
-ADC1.DMAContinuousRequests=DISABLE
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,DMAContinuousRequests,EOCSelection
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ClockPrescaler
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_56CYCLES
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_56CYCLES
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,0,2000,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
@@ -26,77 +39,78 @@ Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP10=USB_OTG_FS
-Mcu.IP2=FREERTOS
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=TIM2
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=11
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
+Mcu.IP2=DMA
+Mcu.IP3=FREERTOS
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM2
+Mcu.IPNb=12
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13-ANTI_TAMP
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA2
-Mcu.Pin11=PA3
-Mcu.Pin12=PA4
-Mcu.Pin13=PA5
-Mcu.Pin14=PA6
-Mcu.Pin15=PA7
-Mcu.Pin16=PC4
-Mcu.Pin17=PC5
-Mcu.Pin18=PB0
-Mcu.Pin19=PB1
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB2
-Mcu.Pin21=PB10
-Mcu.Pin22=PB12
-Mcu.Pin23=PB13
-Mcu.Pin24=PB14
-Mcu.Pin25=PB15
-Mcu.Pin26=PC6
-Mcu.Pin27=PC7
-Mcu.Pin28=PC8
-Mcu.Pin29=PC9
-Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PA8
-Mcu.Pin31=PA9
-Mcu.Pin32=PA10
-Mcu.Pin33=PA11
-Mcu.Pin34=PA12
-Mcu.Pin35=PA13
-Mcu.Pin36=PA14
-Mcu.Pin37=PC10
-Mcu.Pin38=PC11
-Mcu.Pin39=PC12
-Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=PB3
-Mcu.Pin41=PB6
-Mcu.Pin42=PB8
-Mcu.Pin43=PB9
-Mcu.Pin44=VP_CRC_VS_CRC
-Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin46=VP_SYS_VS_tim4
-Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin49=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
-Mcu.Pin5=PC0
-Mcu.Pin50=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.20.0
-Mcu.Pin6=PC1
-Mcu.Pin7=PC2
-Mcu.Pin8=PC3
-Mcu.Pin9=PA1
-Mcu.PinsNb=51
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PA3
+Mcu.Pin11=PA4
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PB2
+Mcu.Pin19=PB10
+Mcu.Pin2=PH0 - OSC_IN
+Mcu.Pin20=PB12
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PB15
+Mcu.Pin24=PC6
+Mcu.Pin25=PC7
+Mcu.Pin26=PC8
+Mcu.Pin27=PC9
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
+Mcu.Pin3=PH1 - OSC_OUT
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PC10
+Mcu.Pin36=PC11
+Mcu.Pin37=PC12
+Mcu.Pin38=PB3
+Mcu.Pin39=PB6
+Mcu.Pin4=PC0
+Mcu.Pin40=PB8
+Mcu.Pin41=PB9
+Mcu.Pin42=VP_CRC_VS_CRC
+Mcu.Pin43=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin44=VP_SYS_VS_tim4
+Mcu.Pin45=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin47=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin48=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.20.0
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=49
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
+NVIC.ADC_IRQn=true\:7\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
@@ -111,7 +125,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.TIM1_CC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.TIM2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:7\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:4\:0\:true\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM4_IRQn
 NVIC.TimeBaseIP=TIM4
@@ -147,13 +161,6 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=LCD_WR
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA5.GPIO_Label=LD2 [Green Led]
-PA5.GPIO_Mode=GPIO_MODE_OUTPUT_PP
-PA5.GPIO_PuPd=GPIO_NOPULL
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PA5.Locked=true
-PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=LCD_RD
 PA6.Locked=true
@@ -206,7 +213,7 @@ PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB6.Locked=true
-PB6.PinState=GPIO_PIN_SET
+PB6.PinState=GPIO_PIN_RESET
 PB6.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB8.GPIO_Label=TOUCH_IRQ
@@ -218,7 +225,7 @@ PB9.GPIO_Label=RST_VOUT
 PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB9.GPIO_PuPd=GPIO_NOPULL
 PB9.Locked=true
-PB9.PinState=GPIO_PIN_SET
+PB9.PinState=GPIO_PIN_RESET
 PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=DB0
@@ -240,12 +247,6 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=DB12
 PC12.Locked=true
 PC12.Signal=GPIO_Output
-PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
-PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC13-ANTI_TAMP.GPIO_PuPd=GPIO_NOPULL
-PC13-ANTI_TAMP.Locked=true
-PC13-ANTI_TAMP.Signal=GPXTI13
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
@@ -318,7 +319,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,10-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,10-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,11-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -352,8 +353,6 @@ SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
 SH.ADCx_IN3.0=ADC1_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,Input_Capture2_from_TI2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,Input_Capture3_from_TI3
@@ -386,12 +385,13 @@ TIM1.ICFilter_CH3=0
 TIM1.ICPrescaler-Input_Capture2_from_TI2=TIM_ICPSC_DIV1
 TIM1.ICPrescaler-Input_Capture3_from_TI3=TIM_ICPSC_DIV1
 TIM1.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture2_from_TI2,ICFilter_CH2,ICFilter_CH3,Prescaler,ClockDivision,ICPrescaler-Input_Capture2_from_TI2,ICPrescaler-Input_Capture3_from_TI3
-TIM1.Prescaler=83
+TIM1.Prescaler=71
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=30
 TIM2.Prescaler=8399
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
-USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-CUSTOM_HID_FS,PRODUCT_STRING_CUSTOMHID_FS
+USB_DEVICE.CUSTOM_HID_FS_BINTERVAL=0xA
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-CUSTOM_HID_FS,PRODUCT_STRING_CUSTOMHID_FS,CUSTOM_HID_FS_BINTERVAL
 USB_DEVICE.PRODUCT_STRING_CUSTOMHID_FS=Bode Analyzer 1.0
 USB_DEVICE.VirtualMode-CUSTOM_HID_FS=CustomHid
 USB_DEVICE.VirtualModeFS=Custom_Hid_FS
